--- a/App/Views/Expense/success.html
+++ b/App/Views/Expense/success.html
@@ -4,6 +4,12 @@
 
 {% block body %}
 
-    <p>Sukces! Dodano nowy wydatek.</p>
+    <div class="row">
+		<div class="col-auto">
+			<div class="settings p-2">
+				Sukces! Dodano nowy wydatek.
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
