--- a/App/Views/Settings/show.html
+++ b/App/Views/Settings/show.html
@@ -3,9 +3,13 @@
 {% block title %}Settings{% endblock %}
 
 {% block body %}
-
-    <h2>Ustawienia</h2>
-
-    <p>Coming soon!</p>
+    
+	<div class="row">
+		<div class="col-auto">
+			<div class="settings p-2">
+				Coming soon!
+			</div>
+		</div>
+	</div>	
 
 {% endblock %}
