--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -2,12 +2,33 @@
 
 {% block title %}Home{% endblock %}
 
-{% block body %}
-
-    {% if current_user %}
-		Witaj {{ current_user.username }}.			
-	{% else %}
-		<a href="/signup/new">Rejestracja</a> or <a href="/login">Logowanie</a>.
-	{% endif %}
+{% block body %}	
+	
+	<div class="content">
+		{% if current_user %}
+			<div class="row">
+				<div class="col-auto">
+					<div class="greetings p-2">
+						Witaj {{ current_user.username }}.
+					</div>
+				</div>
+			</div>
+		{% else %}			
+			<div class="col-auto mt-5">
+				<div class="about text-center p-3 float-left">
+					<p>Czym jest <span style="color: #C0C0C0;">BUDŻETOWIEC</span>?
+					To osobista aplikacja internetowa do prowadzenia budżetu domowego.</p>
+					<p>Jak zacząć znajomość z <span style="color: #C0C0C0;">BUDŻETOWCEM</span>?
+					Wystarczy założyć konto na stronie rejestracji. Po zalogowaniu można dodawać swoje przychody i wydatki oraz przeglądać bilans.</p>
+					<p>Dlaczego miałbym/miałabym używać <span style="color: #C0C0C0;">BUDŻETOWCA</span>?
+					Za jego pomocą zapanujesz nad wydatkami, co pozwoli zaoszczędzić pięniądze! Dzięki prostemu i wygodnemu w obsłudze interfejsowi kontrolowanie swoich finansowych transakcji nigdy nie było przyjemniejsze!</p>					
+					<div class="firstNav p-4">
+						<p><a href="/signup/new" title="Załóż konto!">Rejestracja</a></p>				
+						<p><a href="/login" title="Zaloguj się!">Logowanie</a></p>			
+					</div>
+				</div>				
+			</div>
+		{% endif %}
+	</div>
 
 {% endblock %}
